[package]
name = "dns"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.11", features = ["full"] }
hyper-rustls = "0.27.5"
rustls = "0.23.25"
bytes = "1.10.1"
faster-hex = "0.10.0"
derive_builder = "0.20.2"